Added test and api statics and author controller tests